tests/invalid/lambda_parameter_missing_after_comma.wio
fn Entry() -> i32 {
    let project = (x: i32, ) => x;
    return project(7);
}
